bad/add_invalid_types_void_null.example_compiler_output
ERROR
[1mbad/add_invalid_types_void_null.lat:5:8: [1;31merror: [0;1maddition is defined only for int values or string values, not `void` and `null`[m
	foo() + null;
	      [1;32m^[m
